--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,6 @@
 <html lang="en">
 
 <head>
-  <!--
-      <base href='https://iamsixthousand.github.io/english-for-kids/'>
-    -->
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,7 +12,7 @@
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>React App</title>
+  <title>English For Kids</title>
 </head>
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
